--- a/app/themes/commongood-dev/assets/scss/config/_colors.scss
+++ b/app/themes/commongood-dev/assets/scss/config/_colors.scss
@@ -46,5 +46,7 @@ $ca-spinner-color: $c-white;
 $ca-list-sep-background: $c-white;
 $ca-overlay-background: $c-black;
 $ca-feature-background: $c-black;
+$ca-commongood-img-background: $c-black;
+$ca-pagination-color: $c-light;
 
 
