--- a/app/themes/commongood-dev/assets/scss/atoms/_media.scss
+++ b/app/themes/commongood-dev/assets/scss/atoms/_media.scss
@@ -10,6 +10,29 @@ video {
   display: block;
 }
 
+img {
+  display: block;
+  height: auto;
+  position: relative;
+  text-align: center;
+  width: 100%;
+}
+
+img:before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  content: "We're sorry, this image could not be located";
+  display: block;
+}
+
+img:after {
+  content: "(url: " attr(src) ")";
+  display: block;
+  font-size: 12px;
+}
+
 /**
  * LazyLoad
  */
