--- a/app/themes/commongood-dev/assets/scss/organisms/_featured.scss
+++ b/app/themes/commongood-dev/assets/scss/organisms/_featured.scss
@@ -8,7 +8,7 @@
   position: relative;
   display: block;
   height: 100vh;
-  // background: $ca-feature-background;
+  background: $ca-feature-background;
 }
 
 // .featured__video {
