--- a/app/themes/commongood-dev/assets/scss/organisms/_footer.scss
+++ b/app/themes/commongood-dev/assets/scss/organisms/_footer.scss
@@ -5,7 +5,6 @@ Footer Component
 .footer {
   position: relative;
   padding: $d-quad 0;
-  min-height: $d-dec;
 
   @include bp($bp-tablet) {
     padding: $d-quad $d-trio;
@@ -21,5 +20,7 @@ Footer Component
 }
 
 .footer__nav {
+  width: 50%;
+  display: inline-block;
 }
 
