--- a/app/themes/commongood-dev/assets/scss/templates/_static.scss
+++ b/app/themes/commongood-dev/assets/scss/templates/_static.scss
@@ -10,7 +10,7 @@
   flex: auto;
   width: auto;
   transition: margin $a-timing $a-easing;
-  margin-top: $d-quin;
+  margin-top: $d-sep;
   margin-bottom: $d-duo;
   @include bp($bp-tablet) {
     margin-top: $d-duo - 3px;
