--- a/app/themes/commongood-dev/assets/scss/atoms/_thumbnail.scss
+++ b/app/themes/commongood-dev/assets/scss/atoms/_thumbnail.scss
@@ -2,7 +2,9 @@
 Thumbnail Component
 ========================================= */
 
-.thumbnails
+.thumbnails {
+  padding: $d-thumbnail-padding;
+}
 .thumbnail {
   padding: $d-thumbnail-padding;
 }
