--- a/app/themes/commongood-dev/assets/scss/atoms/_curtain.scss
+++ b/app/themes/commongood-dev/assets/scss/atoms/_curtain.scss
@@ -21,10 +21,10 @@
 }
 
 .curtain__logo {
-  position: absolute;
-  top: 50%;
+  position: fixed;
+  bottom: -75vh;
   left: 50%;
-  transform: translatE(-50%, -50%);
+  transform: translate(-50%, -50%);
   opacity: 0.1;
 }
 
