--- a/app/themes/commongood-dev/assets/scss/organisms/_footer.scss
+++ b/app/themes/commongood-dev/assets/scss/organisms/_footer.scss
@@ -5,7 +5,7 @@ Footer Component
 .footer {
   position: relative;
   padding: $d-quad 0;
-
+  transition: all $a-timing * 2 $a-easing;
   @include bp($bp-tablet) {
     padding: $d-quad $d-trio;
     min-height: $d-dec;
