minor typ tweak

--- a/app/themes/commongood-dev/assets/scss/typography/_paragraphs.scss
+++ b/app/themes/commongood-dev/assets/scss/typography/_paragraphs.scss
@@ -10,5 +10,7 @@ p,
 
 .paragraph--lead > p,
 p.paragraph--lead {
-  font-size: $t-font-size-lead;
+  @include bp($bp-tablet) {
+    font-size: $t-font-size-lead;
+  }
 }
