--- a/app/themes/commongood-dev/assets/scss/atoms/_spinner.scss
+++ b/app/themes/commongood-dev/assets/scss/atoms/_spinner.scss
@@ -17,7 +17,7 @@ Spinner Component
 .loading {
   display: inline-block;
   overflow: hidden;
-  height: 1.3em;
+  height: 69px;
   margin-top: -0.1em;
   line-height: 1.5em;
   font-size: 32px;
