--- a/app/themes/commongood-dev/assets/scss/typography/_global.scss
+++ b/app/themes/commongood-dev/assets/scss/typography/_global.scss
@@ -21,8 +21,9 @@ html {
 
 b,
 strong,
+.font-weight-bold,
 .strong {
-  font-weight: $t-font-weight-bold;
+  font-weight: $t-font-weight-bold !important;
 }
 
 .font-weight-regular {
