--- a/app/themes/commongood-dev/assets/scss/typography/_headings.scss
+++ b/app/themes/commongood-dev/assets/scss/typography/_headings.scss
@@ -34,16 +34,15 @@ h1 {
 h2 {
   font-size: $t-font-size-beta;
   font-weight: $t-font-weight-regular;
+  &.secondary {
+    font-weight: $t-font-weight-bold;
+    color: $ca-heading-secondary-color;
+  }
 }
 
 
 h3 {
   font-size: $t-font-size-gamma;
-  line-height: 2;
-
-  &.secondary {
-    color: $ca-heading-secondary-color;
-  }
 }
 
 h4 {
