--- a/app/themes/commongood-dev/assets/scss/templates/_work.scss
+++ b/app/themes/commongood-dev/assets/scss/templates/_work.scss
@@ -33,7 +33,8 @@
   transition: margin $a-timing $a-easing;
   margin-top: $d-quin;
   @include bp($bp-tablet) {
-    margin-top: 0;
+    margin-top: $d-base/2;
+    margin-bottom: $d-base/2;
     margin-left: $d-quin;
   }
 
