--- a/app/themes/commongood-dev/assets/scss/main.scss
+++ b/app/themes/commongood-dev/assets/scss/main.scss
@@ -74,7 +74,7 @@
  */
 @import 'templates/work';
 @import 'templates/static';
-@import 'templates/commongoods';
+@import 'templates/capitol-violences';
 
 /**
  * Shame Styles
