--- a/app/themes/commongood-dev/assets/scss/atoms/_anchor.scss
+++ b/app/themes/commongood-dev/assets/scss/atoms/_anchor.scss
@@ -14,6 +14,7 @@ a,
   position: relative;
 
   &:hover,
+  &:focus,
   // .current-menu-item &,
   &.is-active {
     color: $ca-anchor-hover-color;
@@ -21,6 +22,7 @@ a,
 
   // .current-menu-item &,
   &.is-active {
+    &:focus,
     &:hover {
       color: $ca-anchor-color;
     }
@@ -46,6 +48,7 @@ a,
   }
 
   &:hover,
+  &:focus,
   // .current-menu-item &,
   &.is-active {
     color: $ca-anchor-color;
@@ -59,6 +62,7 @@ a,
 
   // .current-menu-item &,
   &.is-active {
+    &:focus,
     &:hover {
       color: $ca-anchor-hover-color;
       &:before {
@@ -90,6 +94,7 @@ a,
     animation-name: slideOff;
   }
 
+  &:focus:after,
   &:hover:after {
     color: $ca-anchor-color !important;
     opacity: 1;
