adjusted link arrangement of items in header to accomodate a third, adjusted static and work layouts to accomodate this switch

--- a/app/themes/commongood-dev/assets/scss/atoms/_hamburger.scss
+++ b/app/themes/commongood-dev/assets/scss/atoms/_hamburger.scss
@@ -4,7 +4,7 @@ $lineTranslation: $d-base/4*3;
 
 .hamburger {
   transition: opacity $a-timing;
-  padding: $d-quad $d-quad $d-quad $d-trio;
+  padding: $d-quad $d-trio $d-quad $d-quad;
   height: $d-nano;
   pointer-events: auto;
 
