--- a/app/themes/commongood-dev/assets/scss/templates/_commongoods.scss
+++ b/app/themes/commongood-dev/assets/scss/templates/_commongoods.scss
@@ -85,7 +85,6 @@
   }
 }
 
-
 .commongoods__next,
 .commongoods__prev {
   padding: $d-duo;
@@ -94,5 +93,16 @@
   &.swiper-button-disabled {
     cursor: default;
     opacity: 0.1;
+  }
+}
+
+.single-commongoods {
+
+  .work {
+    padding: $d-sep;
+  }
+
+  #all-work {
+    max-width: 1000px;
   }
 }
