--- a/app/themes/commongood-dev/assets/scss/config/_animations.scss
+++ b/app/themes/commongood-dev/assets/scss/config/_animations.scss
@@ -9,6 +9,9 @@ $a-timing: 400ms;
 $a-easing: cubic-bezier(0.23, 1, 0.32, 1); // http://easings.net/#easeOutQuint
 $a-easing-easeInQuart: cubic-bezier(0.23, 1, 0.32, 1);
 
+$b-timing: 100ms;
+$b-easing: easeOutCirc;
+
 .scene {
 }
 
