--- a/app/themes/commongood-dev/assets/scss/organisms/_header.scss
+++ b/app/themes/commongood-dev/assets/scss/organisms/_header.scss
@@ -55,6 +55,7 @@
 
   &.header__group--right {
     text-align: right;
+    opacity: 1;
   }
 
   &.header__group--center {
@@ -65,6 +66,12 @@
       pointer-events: auto;
     }
   }
-
 }
 
+.nav-is-shown {
+
+  .header__group--center {
+    opacity: 0;
+    transition: opacity $b-timing $b-easing;
+  }
+}
