added styles for single director pages

--- a/app/themes/commongood-dev/assets/scss/templates/_commongoods.scss
+++ b/app/themes/commongood-dev/assets/scss/templates/_commongoods.scss
@@ -93,3 +93,15 @@
     opacity: 0.1;
   }
 }
+
+.single-commongoods {
+
+  .work {
+    padding-top: $d-dec;
+  }
+
+  .work__header {
+    display: flex;
+    justify-content: space-between;
+  }
+}
