--- a/app/themes/commongood-dev/assets/scss/_shame.scss
+++ b/app/themes/commongood-dev/assets/scss/_shame.scss
@@ -9,11 +9,15 @@
 
 .swiper-container-fade .swiper-slide .swiper-slide a {
   height: 100%;
+  width: 100%;
   display: block;
   position: relative;
+  height: 375px;
+  overflow: hidden;
 }
 
 .swiper-container-fade .swiper-slide .swiper-slide img {
-  width: auto;
-  height: 375px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
