--- a/app/themes/commongood-dev/assets/scss/templates/_commongoods.scss
+++ b/app/themes/commongood-dev/assets/scss/templates/_commongoods.scss
@@ -2,29 +2,15 @@
   width: 100%;
   height: 100%;
   margin-bottom: $d-sex;
-
-  .swiper-wrapper {
-    transition-duration: $a-timing !important;
-  }
 }
 
 .commongood {
   position: relative;
-
-  &:before {
-    content: '';
-    position: absolute;
-    top: 0;
-    bottom: -$d-oct;
-    left:0;
-    right: -$d-oct;
-    z-index: 0;
-    background: $ca-commongood-background;
-  }
 }
 
 .commongood__content {
   padding-bottom: $d-quad;
+
   @include bp($bp-tablet) {
     padding-right: $d-quad;
     padding-bottom: $d-sex;
@@ -35,7 +21,8 @@
   width: 100vw;
   margin-bottom: $d-base;
   position: relative;
-  z-index:1;
+  z-index:3;
+
   @include bp($bp-tablet) {
     margin-top: $d-oct;
   }
@@ -54,45 +41,24 @@
   object-fit: cover;
 }
 
-.commongoods__controls {
-  position: absolute;
-  bottom: 0;
-  z-index:1;
+.swiper-container-fade .swiper-slide {
   display: flex;
+  justify-content: center;
   align-items: center;
-  justify-content: flex-end;
-  max-width: $d-container-max;
+  height: 100%;
+  flex-shrink: 0;
+  position: relative;
+}
+
+.swiper-container-fade .swiper-slide a {
+  height: 100%;
   width: 100%;
-  left: 50%;
-  bottom: 0;
-  transform: translateX(-50%);
-  @include bp($bp-tablet) {
-    transform: translateX(calc(-50% + #{$d-oct}));
-  }
+  display: block;
+  position: relative;
+  height: 375px;
+  overflow: hidden;
 }
 
-.commongoods__pagination {
-  text-align: right;
-  bottom: auto;
-  left: auto;
-  color: $ca-pagination-color;
-  width: calc(100% - #{$d-oct});
-  @include bp($bp-tablet) {
-    padding-right: $d-oct;
-    width: calc(#{8 / $d-grid-columns * 100}% - #{$d-oct});
-  }
-}
-
-.commongoods__next,
-.commongoods__prev {
-  padding: $d-duo;
-  width: $d-oct;
-  cursor: pointer;
-  &.swiper-button-disabled {
-    cursor: default;
-    opacity: 0.1;
-  }
-}
 
 .single-commongoods {
 
