added back button to related works grid

--- a/app/themes/commongood-dev/assets/scss/templates/_commongoods.scss
+++ b/app/themes/commongood-dev/assets/scss/templates/_commongoods.scss
@@ -59,7 +59,6 @@
   overflow: hidden;
 }
 
-
 .single-commongoods {
 
   .work {
@@ -70,4 +69,13 @@
     display: flex;
     justify-content: space-between;
   }
+
+  .commongood__back {
+    padding-left: $d-trio;
+  }
+}
+
+.work__related--header {
+  display: flex;
+  justify-content: space-between;
 }
