--- a/app/themes/commongood-dev/assets/scss/templates/_commongoods.scss
+++ b/app/themes/commongood-dev/assets/scss/templates/_commongoods.scss
@@ -21,7 +21,7 @@
   width: 100vw;
   margin-bottom: $d-base;
   position: relative;
-  z-index: 3;
+  z-index: index($l-site, text);
 
   @include bp($bp-tablet) {
     margin-top: $d-oct;
@@ -39,6 +39,10 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.swiper-container-fade {
+  z-index: index($l-site, main);
 }
 
 .swiper-container-fade .swiper-slide {
